# Purge-Line-Generator

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.scripts/: build.bat  clean_build.bat
purge_line_generator/: __init__.py  cli.py
purge_line_generator/patterns/: __init__.py  sine.py  straight.py  zig_zag.py
